<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundbaitap2"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/CachGiai"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundbaitap2"
        android:paddingLeft="85dp"
        android:paddingRight="35dp"
        android:paddingTop="70dp"
        android:text="@string/LogicHoiKQ"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/Content"
        android:layout_width="231dp"
        android:layout_height="167dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/LogicText"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.129" />

    <Button
        android:id="@+id/btnDapAnA"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttondapan"
        android:onClick="onButtonClick"
        android:paddingTop="40dp"
        android:text="@string/DapAnA"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDapAnB"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

    <Button
        android:id="@+id/btnDapAnB"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/buttondapan"
        android:onClick="onButtonClick"
        android:paddingTop="40dp"
        android:text="@string/DapAnB"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDapAnC"
        app:layout_constraintStart_toEndOf="@+id/btnDapAnA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnDapAnC"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/buttondapan"
        android:onClick="onButtonClick"
        android:paddingTop="40dp"
        android:text="@string/DapAnC"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnDapAnD"
        app:layout_constraintStart_toEndOf="@+id/btnDapAnB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnDapAnD"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/buttondapan"
        android:onClick="onButtonClick"
        android:paddingTop="40dp"
        android:text="@string/DapAnD"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnDapAnC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/countlogic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:autoText="false"
        android:background="@drawable/cau"
        android:text="Câu 1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="23sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toEndOf="@+id/pointLonbe"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <TextView
        android:id="@+id/pointlogic"
        android:layout_width="126dp"
        android:layout_height="41dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:autoText="false"
        android:background="@drawable/diem"
        android:freezesText="false"
        android:text=" 0"
        android:textColor="@android:color/holo_orange_dark"
        android:textDirection="firstStrongLtr"
        android:textIsSelectable="false"
        android:textSize="25sp"
        android:paddingTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/countlogic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="142dp"
        android:layout_height="62dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_next"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" /> />

</android.support.constraint.ConstraintLayout>