<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundbaitap"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/txtQuestionToanHinh"
        android:layout_width="261dp"
        android:layout_height="167dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Hình chữ nhật"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/btnToanHinhA"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttondapan"
        android:onClick="onButtonClick"
        android:paddingTop="40dp"
        android:text="@string/DapAnA"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnToanHinhB"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.898" />

    <Button
        android:id="@+id/btnToanHinhB"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/buttondapan"
        android:onClick="onButtonClick"
        android:paddingTop="40dp"
        android:text="@string/DapAnB"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnToanHinhC"
        app:layout_constraintStart_toEndOf="@+id/btnToanHinhA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnToanHinhC"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/buttondapan"
        android:onClick="onButtonClick"
        android:paddingTop="40dp"
        android:text="@string/DapAnC"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnToanHinhD"
        app:layout_constraintStart_toEndOf="@+id/btnToanHinhB"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnToanHinhD"
        android:layout_width="80dp"
        android:layout_height="81dp"
        android:layout_marginBottom="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/buttondapan"
        android:onClick="onButtonClick"
        android:paddingTop="40dp"
        android:text="@string/DapAnD"
        android:textSize="25sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnToanHinhC"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/countToanHinh"
        android:layout_width="98dp"
        android:layout_height="49dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/cau"
        android:paddingLeft="8dp"
        android:paddingTop="7dp"
        android:text="@string/Cau"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnNextToanHinh"
        android:layout_width="168dp"
        android:layout_height="89dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_next"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751"  />

    <TextView
        android:id="@+id/pointToanHinh"
        android:layout_width="126dp"
        android:layout_height="41dp"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:background="@drawable/diem"
        android:freezesText="false"
        android:text=" 0"
        android:textColor="@android:color/holo_orange_dark"
        android:textDirection="firstStrongLtr"
        android:textIsSelectable="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.015" />

    <ImageView
        android:id="@+id/imageToanHinh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232"
        app:srcCompat="@android:drawable/btn_star" />

</android.support.constraint.ConstraintLayout>